--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "start:typescript": "npm run build:typescript -- --watch"
   },
   "dependencies": {
+    "botframework-webchat": "^4.15.8",
+    "math-random": "^2.0.1",
+    "p-defer": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "simple-update-in": "^2.2.0",
+    "use-ref-from": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.20",
