--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start:typescript": "npm run build:typescript -- --watch"
   },
   "dependencies": {
-    "botframework-webchat": "^4.15.8",
+    "botframework-webchat": "4.15.9",
+    "botframework-webchat-core": "4.15.9",
+    "markdown-it": "13.0.1",
     "math-random": "^2.0.1",
     "p-defer": "^4.0.0",
     "react": "^18.2.0",
