--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "dependencies": {
     "botframework-webchat": "4.15.9",
     "botframework-webchat-core": "4.15.9",
-    "markdown-it": "13.0.1",
     "math-random": "^2.0.1",
+    "mdast": "3.0.0",
+    "mdast-util-from-markdown": "2.0.0",
     "p-defer": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
