--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
   "dependencies": {
     "botframework-webchat": "4.15.9",
     "botframework-webchat-core": "4.15.9",
+    "classnames": "^2.3.2",
+    "markdown-it": "13.0.1",
+    "markdown-it-attrs": "4.1.6",
+    "markdown-it-attrs-es5": "2.0.2",
+    "markdown-it-for-inline": "0.1.1",
     "math-random": "^2.0.1",
     "mdast": "3.0.0",
     "mdast-util-from-markdown": "2.0.0",
     "p-defer": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sanitize-html": "2.10.0",
     "simple-update-in": "^2.2.0",
     "use-ref-from": "^0.0.2"
   },
