--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:typescript": "npm run build:typescript -- --watch"
   },
   "dependencies": {
+    "@emotion/css": "11.11.2",
     "botframework-webchat": "4.15.9",
     "botframework-webchat-core": "4.15.9",
     "classnames": "^2.3.2",
