--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "start:typescript": "npm run build:typescript -- --watch"
   },
   "dependencies": {
-    "@fluentui/react": "8.109.3",
     "@emotion/css": "11.11.2",
+    "@fluentui/react": "^8.109.3",
+    "@fluentui/react-icons": "^2.0.212",
     "botframework-webchat": "4.15.9",
     "botframework-webchat-core": "4.15.9",
     "classnames": "^2.3.2",
